# sketch

./: .flake8  .gitignore  LICENSE  README.md  SETUP_README.md  clean_juypter.sh  dev-requirements.txt  pyproject.toml  setup.py  startserver.sh
.github/workflows/: publish-to-pypi.yml
sketch/: .env.example  __init__.py  core.py  howto.py  metrics.py  pandas_extension.py  references.py  sketches.py
sketch/api/: auth.py  data.py  deps.py  main.py  models.py  nbasql.py  package-lock.json  promptapi.py  search_based_answers.py
sketch/api/static/: output.css  styles.css
sketch/api/tailwindcss/: package-lock.json  package.json  tailwind.config.js
sketch/api/templates/: base.html  component_base.html  header.html  login.html  root.html
sketch/api/templates/component/: readme.md  references.html
sketch/examples/: .env.example  .gitignore  TestServerExample.ipynb  Untitled.ipynb  develop_220717.ipynb  devtest.ipynb  prompt_machine.py
sketch/examples/Text2SQL_Iterations/: 001_Prompts_2ary_groundtruth.ipynb  003_sketchpad_to_metrics.ipynb  DirectQALearning.ipynb  Prompts_2ary_groundtruth.ipynb  binary_knn_sketch_from_groundtruth.ipynb  first_groundtruth_pytorch.ipynb  sketchpad_to_metrics.ipynb  testSotA.ipynb
sketch/examples/apps/: example_join.py  streamlit_examples.py
sketch/examples/datasets/: Automerge.ipynb  Untitled.ipynb  download_all.sh  get_fivethirtyeight.sh  sparql_wikidata_download.sh  sqlites.txt
sketch/examples/notebooks/: 220920_chatbot_test.ipynb  Automerge.ipynb  BasicUpload.ipynb  DirectQALearning.ipynb  JoinFinderDemo.ipynb  NLP-playing.ipynb  SearchIdeas.ipynb  SketchPadMetricTests.ipynb  TestServerExample.ipynb  Untitled.ipynb  WikiExplore.ipynb  WikiTableParse.ipynb  debug_hll_problem_sketchpads.ipynb  develop_220717.ipynb  inspect.ipynb  prompt_machine.ipynb  temporary_results.pkl  test_chart_making.ipynb  whylogs_try.ipynb
tests/: conftest.py  test_calculate_sketches.py  test_metrics_from_sketchpads.py  test_pandas_extension.py
(+43 files in other folders)
